--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -12,7 +12,11 @@ nav:
     - study-registration/registering-your-study.md
   - Study-Level Metadata Submission (CEDAR Form): slmd_submission.md
   - healdata-utils temp: vlmd-healdata-utils.md
-  - Variable-level Metadata Submission: vlmd_submission.md
+  - Variable-level Metadata Submission: 
+    - vlmd/index.md
+    - vlmd/vlmd_healdata_utils.md
+    - vlmd/vlmd_request_access.md
+    - vlmd/vlmd_submission.md
   - Workspace Registration: heal_workspace_registration.md
   - Data and Repositories:
     - Types of Hosted Data: hosted_data_types.md
