--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -16,8 +16,12 @@ nav:
     - vlmd/vlmd_healdata_utils.md
     - vlmd/vlmd_request_access.md
     - vlmd/vlmd_submission.md
-    - Resources:
+    - VLMD Resources:
       - vlmd/resources/supported_input_formats.md
+      - Fields: 
+        - vlmd/resources/rendered-schemas/index.md
+        - CSV Data dictionary: vlmd/resources/rendered-schemas/csv-fields.md
+        - JSON Data dictionary: vlmd/resources/rendered-schemas/json-fields.md
   - Workspace Registration: heal_workspace_registration.md
   - Data and Repositories:
     - Types of Hosted Data: hosted_data_types.md
