--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -11,16 +11,7 @@ nav:
     - study-registration/requesting-access.md
     - study-registration/registering-your-study.md
   - Study-Level Metadata Submission (CEDAR Form): slmd_submission.md
-  - Variable-level Metadata Submission: 
-    - vlmd/index.md
-    - vlmd/vlmd_healdata_utils.md
-    - vlmd/vlmd_submission.md
-    - VLMD Resources:
-      - vlmd/resources/supported_input_formats.md
-      - Fields: 
-        - vlmd/resources/rendered-schemas/index.md
-        - CSV Data dictionary: vlmd/resources/rendered-schemas/csv-fields.md
-        - JSON Data dictionary: vlmd/resources/rendered-schemas/json-fields.md
+  - Variable-level Metadata Submission: vlmd_submission.md
   - Workspace Registration: heal_workspace_registration.md
   - Data and Repositories:
     - Types of Hosted Data: hosted_data_types.md
