--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -15,7 +15,10 @@ nav:
     - vlmd/index.md
     - vlmd/vlmd_healdata_utils.md
     - vlmd/vlmd_submission.md
-  - Workspace Registration: heal_workspace_registration.md
+  - Workspace Registration:
+    - workspaces/index.md
+    - workspaces/heal_workspace_registration.md
+    - workspaces/heal_workspaces.md
   - Data and Repositories:
     - Types of Hosted Data: hosted_data_types.md
     - Data Management and Repositories: data_mgmt_and_repos.md
